--- a/Webgl/index.html
+++ b/Webgl/index.html
@@ -6,7 +6,7 @@
     <title>Unity WebGL Player | Luna Lunar VR prototipo</title>
     <script src="Build/UnityLoader.js"></script>
     <script>
-      UnityLoader.instantiate("unityContainer", "Build/2022.json");
+      UnityLoader.instantiate("unityContainer", "Build/new.json");
     </script>
   </head>
   <body>
